hphp/hack/test/typecheck/const_attribute/single_const_attribute_within_class.php.exp
File "single_const_attribute_within_class.php", line 12, characters 12-13:
Cannot mutate a __Const property (Typing[4196])
