hphp/hack/test/typecheck/const_attribute/single_const_attribute_within_class.php
<?hh

class A {
  <<__Const>>
  public int $CA;

  public function __construct() {
    $this->CA = 4;
  }

  public function fail(): void {
    $this->CA = 42;
  }
}
